Buttons invisible and track border corrected

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ code {
 	width: 100%;
 	background-size: 100% 100%;
 	border: 1px solid black;
+	z-index: -1;
 }
 
 .box {
@@ -106,22 +107,16 @@ code {
 }
 
 .middleButton {
-	/* opacity: 0; */
+	opacity: 0;
 	position: absolute;
-	height: calc((var(--box-dim)/2*0.7));
-	width: calc((var(--box-dim)/2*0.7));
-	/* 0.707106781 */
+	height: calc((var(--box-dim)/2*0.707106781));
+	width: calc((var(--box-dim)/2*0.707106781));
 	z-index: 1;
 	-webkit-transform: rotate(45deg) translate(-50%, -50%);
 	-moz-transform: rotate(45deg) translate(-50%, -50%);
 	-o-transform: rotate(45deg) translate(-50%, -50%);
 	-ms-transform: rotate(45deg) translate(-50%, -50%);
 	transform: rotate(45deg) translate(-50%, -50%);
-	/* -webkit-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	-o-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%); */
 	transform-origin: top left;
 }
 .top {
@@ -149,6 +144,7 @@ code {
 }
 
 .centreButton {
+	opacity: 0;
 	position: absolute;
 	top: 50%;
 	left: 50%;
